# anchor-basic-amm

./: .gitignore  Trident.toml
programs/anchor-basic-amm/src/: error.rs  lib.rs  utils.rs
programs/anchor-basic-amm/src/instructions/: add_liquidity.rs  mod.rs  swap.rs
tests/: anchor-basic-amm.ts
trident-tests/fuzz_tests/: Cargo.toml
trident-tests/fuzz_tests/fuzz_0/: accounts_snapshots.rs  fuzz_instructions.rs  test_fuzz.rs
