[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
anchor-spl = { version = "0.30.1" }
spl-math = { version = "0.2.0", features = ["no-entrypoint"] }

[dependencies.trident-client]
version = "0.7.0"

[dependencies.anchor-basic-amm]
path = "../../programs/anchor-basic-amm"
